syntax = "proto3";

option csharp_namespace = "FreeRP.GrpcService.Plugin";

package plugin;

message Plugin {
    string plugin_id = 1;
    string name = 2;
    string description = 3;
	string authors = 4;
	string license_url = 5;
	string project_url = 6;
	string update_url = 7;
	string icon = 8;
	string version = 9;
    bool external = 10;
    string external_url = 11; 
    repeated string databases = 12;
}

message PluginTranslation {
    string code = 1;
    string name = 2;
    string description = 3;
}

message PluginData {
    Plugin plugin = 1;
}

message PluginRole {
    string plugin_id = 1;
    string role_id = 2;
}
